[tool.poetry]
name = "http_quest"
version = "0.1.0"
description = "Have your own quest over HTTP"
authors = ["Tanay PrabhuDesai <tanayseven@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
flask-sqlalchemy = "^2.4.1"
flask-migrate = "^2.5.2"
flask-jwt = "^0.3.2"
flask-mail = "^0.9.1"
flask-bcrypt = "^0.7.1"
psycopg2-binary = "^2.8.4"
gunicorn = "^20.0.4"
flask-babel = "^0.12.2"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.1"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"
flask-testing = "^0.7.1"
coveralls = "^1.9.2"
doubles = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
